[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Dino.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Dinosaurs/DinoSprites - vita.png" type="Texture" id=2]
[ext_resource path="res://Scenes/LevelSelect.gd" type="Script" id=3]
[ext_resource path="res://GroundKey.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/key.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Pizel.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://new_theme.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 168, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 24, 24 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 2.25, 1.83334 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="LevelSelect" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -6.0
margin_right = 2.0
margin_bottom = -6.0
theme = SubResource( 2 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelSelect"]
margin_left = 228.0
margin_top = 148.0
margin_right = 795.0
margin_bottom = 452.0
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="LevelSelect/VBoxContainer"]
margin_right = 567.0
margin_bottom = 72.0
theme = ExtResource( 7 )
theme_type_variation = "BigLabel"
text = "SELECT A LEVEL"

[node name="Level1" type="Button" parent="LevelSelect/VBoxContainer"]
margin_top = 76.0
margin_right = 567.0
margin_bottom = 130.0
theme = ExtResource( 7 )
text = "EASY"

[node name="Level2" type="Button" parent="LevelSelect/VBoxContainer"]
margin_top = 134.0
margin_right = 567.0
margin_bottom = 188.0
theme = ExtResource( 7 )
text = "MEDIUM"

[node name="Level3" type="Button" parent="LevelSelect/VBoxContainer"]
margin_top = 192.0
margin_right = 567.0
margin_bottom = 246.0
theme = ExtResource( 7 )
text = "HARD"

[node name="Level4" type="Button" parent="LevelSelect/VBoxContainer"]
margin_top = 250.0
margin_right = 567.0
margin_bottom = 304.0
theme = ExtResource( 7 )
text = "UNFAIR"

[node name="Record" type="Label" parent="."]
margin_left = 3.0
margin_top = 15.0
margin_right = 1027.0
margin_bottom = 87.0
theme = ExtResource( 7 )
theme_type_variation = "BigLabel"
align = 1

[node name="Keys" type="Node2D" parent="."]
position = Vector2( -6, -5 )

[node name="Key" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 296, 575 )
scale = Vector2( 3, 3 )
key = "J"

[node name="Key2" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 410, 575 )
scale = Vector2( 3, 3 )

[node name="Key3" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 523, 575 )
scale = Vector2( 3, 3 )
key = "G"

[node name="Key4" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 580, 575 )
scale = Vector2( 3, 3 )

[node name="Key5" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 637, 575 )
scale = Vector2( 3, 3 )
key = "M"

[node name="Key6" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 694, 575 )
scale = Vector2( 3, 3 )
key = "E"

[node name="Key7" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 353, 575 )
scale = Vector2( 3, 3 )
key = "G"

[node name="Key8" parent="Keys" instance=ExtResource( 5 )]
position = Vector2( 751, 575 )
scale = Vector2( 3, 3 )
key = "S"

[node name="GroundKey" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 467, 573 )
scale = Vector2( 3, 3 )

[node name="GroundKey2" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 239, 572 )
scale = Vector2( 3, 3 )

[node name="GroundKey3" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 182, 572 )
scale = Vector2( 3, 3 )

[node name="GroundKey4" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 125, 572 )
scale = Vector2( 3, 3 )

[node name="GroundKey5" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 68, 572 )
scale = Vector2( 3, 3 )

[node name="GroundKey6" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 979.5, 572.5 )
scale = Vector2( 3, 3 )

[node name="GroundKey7" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 922.5, 572.5 )
scale = Vector2( 3, 3 )

[node name="GroundKey8" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 865.5, 572.5 )
scale = Vector2( 3, 3 )

[node name="GroundKey9" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 808.5, 572.5 )
scale = Vector2( 3, 3 )

[node name="GroundKey10" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 11, 572 )
scale = Vector2( 3, 3 )

[node name="GroundKey11" parent="Keys" instance=ExtResource( 4 )]
position = Vector2( 1036.5, 572.5 )
scale = Vector2( 3, 3 )

[node name="Dino" type="AnimatedSprite" parent="."]
position = Vector2( 38, 502 )
scale = Vector2( 6, 6 )
z_index = 1
frames = SubResource( 10 )
frame = 5
playing = true
script = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Dino"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dino/KinematicBody2D"]
position = Vector2( -0.166667, 5.66666 )
shape = SubResource( 11 )
